[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Orin.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Orin/Orin1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Orin/Orin2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Orin/Orin3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Orin/Orin4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Orin/Orin5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Orin/Orin6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Orin/Orin7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Orin/Orin8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Orin/Orin9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Orin/Orin10.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Orin/Orin11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Orin/Orin12.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Orin/Orin13.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 6.53301, 9.06751 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 2.70041, 0.8871 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Orin" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -10 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="OrinArea" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrinArea" index="0"]

position = Vector2( -2.50689, -5.45247 )
shape = SubResource( 4 )

[node name="OrinCollision" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -2.70761, -7.09965 )
scale = Vector2( 0.410681, 1 )
shape = SubResource( 2 )
disabled = true
_sections_unfolded = [ "Visibility" ]

[node name="AttackArea" type="Area2D" parent="." index="3"]

position = Vector2( -0.18289, -20.6768 )
scale = Vector2( 1.31154, 0.484008 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]

position = Vector2( -1.88937, -4.53448 )
shape = SubResource( 3 )

[connection signal="body_entered" from="OrinArea" to="." method="_on_OrinArea_body_entered"]

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]


